--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'QH'
 - !lcsh 'Guyana -- Description and travel'
 - !lcsh 'Natural history -- Guyana'
+- GITenberg
 title: Jungle Peace
 url: http://www.gutenberg.org/ebooks/37614
